group("test") {
}

test("jasl_murmurhash3") {
}
test("jasl_string_view") {
}
test("jasl_string_view_bridge_compare") {
}
test("jasl_static_string") {
}
test("jasl_string") {
}

test_build_err("jasl_string_view_constructor1") {
}
test_build_err("jasl_static_string_assignment") {
}
test_build_err("jasl_static_string_constructor1") {
}
test_build_err("jasl_static_string_constructor2") {
}
test_build_err("jasl_static_string_constructor3") {
}
test_build_err("jasl_static_string_copy_constructor") {
}
test_build_err("jasl_static_string_swap_with_base") {
}
test_build_err("jasl_string_assignment_cstr") {
}