group("test") {
}

test("jasl_murmurhash3") {
}
test("jasl_string_view") {
}
test("jasl_string_view_bridge_compare") {
}
test("jasl_static_string") {
}
test("jasl_string") {
}

test_build_err("jasl_string_view_constructor1") {
  if(is_clang) {
    error_regex = "13:41: error: no matching constructor for initialization of 'jasl::nonstd::basic_string_view<char>'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_assignment") {
  if(is_clang) {
    error_regex = "14:5: error: no viable overloaded '='"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_constructor1") {
  if(is_clang) {
    error_regex = "12:23: error: no matching constructor for initialization of 'jasl::static_string'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_constructor2") {
  if(is_clang) {
    error_regex = "13:23: error: no matching constructor for initialization of 'jasl::static_string'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_constructor3") {
  if(is_clang) {
    error_regex = "13:23: error: no matching constructor for initialization of 'jasl::static_string'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_copy_constructor") {
  if(is_clang) {
    error_regex = ".cpp.c:13:23: error: no matching constructor for initialization of 'jasl::static_string'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_static_string_swap_with_base") {
  if(is_clang) {
    error_regex = "14:10: error: non-const lvalue reference to type 'jasl::basic_static_string<char, std::__1::char_traits<char> >' cannot bind to a value of unrelated type 'jasl::static_string::base_type'"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}
test_build_err("jasl_string_assignment_cstr") {
  if(is_clang) {
    error_regex = "14:5: error: no viable overloaded '='"
  } else if(is_gcc) {
    error_regex = "TODO"
  } else if(is_msvc) {
    msvc_error_regex = "TODO"
  }
}